--- a/index.html
+++ b/index.html
@@ -768,16 +768,16 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_introduction">1. Introduction</a></li>
-<li><a href="#_who_is_responsible_for_it">2. Who is responsible for it?</a></li>
-<li><a href="#_libraries_developed_by_us">3. Libraries developed by us</a>
+<li><a href="#_introduction">Introduction</a></li>
+<li><a href="#_who_is_responsible_for_it">Who is responsible for it?</a></li>
+<li><a href="#_libraries_developed_by_us">Libraries developed by us</a>
 <ul class="sectlevel2">
-<li><a href="#_buddy">3.1. buddy</a></li>
-<li><a href="#_cats">3.2. cats</a></li>
-<li><a href="#_suricatta">3.3. suricatta</a></li>
-<li><a href="#_clojure_jdbc">3.4. clojure.jdbc</a></li>
-<li><a href="#_hodgepodge">3.5. hodgepodge</a></li>
-<li><a href="#_cuerdas">3.6. cuerdas</a></li>
+<li><a href="#_buddy">buddy</a></li>
+<li><a href="#_cats">cats</a></li>
+<li><a href="#_suricatta">suricatta</a></li>
+<li><a href="#_clojure_jdbc">clojure.jdbc</a></li>
+<li><a href="#_hodgepodge">hodgepodge</a></li>
+<li><a href="#_cuerdas">cuerdas</a></li>
 </ul>
 </li>
 </ul>
@@ -785,7 +785,7 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="_introduction"><a class="link" href="#_introduction">1. Introduction</a></h2>
+<h2 id="_introduction"><a class="link" href="#_introduction">Introduction</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>funcool</strong> is a growing collection of open source Clojure and ClojureScript libraries that
@@ -832,7 +832,7 @@ reference list of libraries.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_who_is_responsible_for_it"><a class="link" href="#_who_is_responsible_for_it">2. Who is responsible for it?</a></h2>
+<h2 id="_who_is_responsible_for_it"><a class="link" href="#_who_is_responsible_for_it">Who is responsible for it?</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>funcool</strong> is a little comunity managed by a little group of persons that loves functional
@@ -844,10 +844,10 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_libraries_developed_by_us"><a class="link" href="#_libraries_developed_by_us">3. Libraries developed by us</a></h2>
+<h2 id="_libraries_developed_by_us"><a class="link" href="#_libraries_developed_by_us">Libraries developed by us</a></h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_buddy"><a class="link" href="#_buddy">3.1. buddy</a></h3>
+<h3 id="_buddy"><a class="link" href="#_buddy">buddy</a></h3>
 <div class="paragraph">
 <p><strong>buddy</strong> is a complete security library for clojure with support for:</p>
 </div>
@@ -863,7 +863,7 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_cats"><a class="link" href="#_cats">3.2. cats</a></h3>
+<h3 id="_cats"><a class="link" href="#_cats">cats</a></h3>
 <div class="paragraph">
 <p>Category Theory abstractions for Clojure.</p>
 </div>
@@ -879,7 +879,7 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_suricatta"><a class="link" href="#_suricatta">3.3. suricatta</a></h3>
+<h3 id="_suricatta"><a class="link" href="#_suricatta">suricatta</a></h3>
 <div class="paragraph">
 <p>High level sql toolkit for clojure (backed by jooq library)</p>
 </div>
@@ -895,7 +895,7 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_clojure_jdbc"><a class="link" href="#_clojure_jdbc">3.4. clojure.jdbc</a></h3>
+<h3 id="_clojure_jdbc"><a class="link" href="#_clojure_jdbc">clojure.jdbc</a></h3>
 <div class="paragraph">
 <p><em>clojure.jdbc</em> is a library for low level, jdbc-based database access.</p>
 </div>
@@ -914,7 +914,7 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_hodgepodge"><a class="link" href="#_hodgepodge">3.5. hodgepodge</a></h3>
+<h3 id="_hodgepodge"><a class="link" href="#_hodgepodge">hodgepodge</a></h3>
 <div class="paragraph">
 <p>A idiomatic ClojureScript interface to local and session storage.</p>
 </div>
@@ -930,7 +930,7 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_cuerdas"><a class="link" href="#_cuerdas">3.6. cuerdas</a></h3>
+<h3 id="_cuerdas"><a class="link" href="#_cuerdas">cuerdas</a></h3>
 <div class="paragraph">
 <p>The missing clojurescript string manipulation library.</p>
 </div>
@@ -947,7 +947,7 @@ programming and good and well documented open source software.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-20 19:08:00 CET
+Last updated 2014-12-20 19:12:17 CET
 </div>
 </div>
 </body>
