--- a/index.html
+++ b/index.html
@@ -780,6 +780,29 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 <li><a href="#_cuerdas">cuerdas</a></li>
 </ul>
 </li>
+<li><a href="#_third_party_libraries_for_clojure">Third party libraries for Clojure</a>
+<ul class="sectlevel2">
+<li><a href="#_cheshire">cheshire</a></li>
+<li><a href="#_clj_time">clj-time</a></li>
+<li><a href="#_potemkin">potemkin</a></li>
+<li><a href="#_nippy">nippy</a></li>
+<li><a href="#_jet">jet</a></li>
+<li><a href="#_nomad">nomad</a></li>
+</ul>
+</li>
+<li><a href="#_third_party_libraries_for_clojurescript">Third party libraries for ClojureScript</a>
+<ul class="sectlevel2">
+<li><a href="#_secretary">secretary</a></li>
+<li><a href="#_shodan">shodan</a></li>
+<li><a href="#_hipo">hipo</a></li>
+<li><a href="#_dommy">dommy</a></li>
+</ul>
+</li>
+<li><a href="#_third_party_libraries_for_both_clojure_and_clojurescript">Third party libraries for both: Clojure and ClojureScript</a>
+<ul class="sectlevel2">
+<li><a href="#_schema">schema</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -944,10 +967,170 @@ programming and good and well documented open source software.</p>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_third_party_libraries_for_clojure"><a class="link" href="#_third_party_libraries_for_clojure">Third party libraries for Clojure</a></h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_cheshire"><a class="link" href="#_cheshire">cheshire</a></h3>
+<div class="paragraph">
+<p>Clojure JSON and JSON SMILE (binary json format) encoding/decoding.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/dakrone/cheshire" class="bare">https://github.com/dakrone/cheshire</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_clj_time"><a class="link" href="#_clj_time">clj-time</a></h3>
+<div class="paragraph">
+<p>A date and time library for Clojure, wrapping the Joda Time library.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/clj-time/clj-time" class="bare">https://github.com/clj-time/clj-time</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_potemkin"><a class="link" href="#_potemkin">potemkin</a></h3>
+<div class="paragraph">
+<p>Potemkin is a collection of facades and workarounds for things that are more difficult
+than they should be.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/ztellman/potemkin" class="bare">https://github.com/ztellman/potemkin</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_nippy"><a class="link" href="#_nippy">nippy</a></h3>
+<div class="paragraph">
+<p>Clojure serialization library</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/ptaoussanis/nippy" class="bare">https://github.com/ptaoussanis/nippy</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_jet"><a class="link" href="#_jet">jet</a></h3>
+<div class="paragraph">
+<p>Jetty9 ring server adapter with WebSocket support via core.async and Jetty9 based
+HTTP &amp; WebSocket clients.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/mpenet/jet" class="bare">https://github.com/mpenet/jet</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_nomad"><a class="link" href="#_nomad">nomad</a></h3>
+<div class="paragraph">
+<p>A Clojure library designed to allow Clojure configuration to travel between hosts.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/james-henderson/nomad" class="bare">https://github.com/james-henderson/nomad</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_third_party_libraries_for_clojurescript"><a class="link" href="#_third_party_libraries_for_clojurescript">Third party libraries for ClojureScript</a></h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_secretary"><a class="link" href="#_secretary">secretary</a></h3>
+<div class="paragraph">
+<p>A client-side router for ClojureScript.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/gf3/secretary" class="bare">https://github.com/gf3/secretary</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_shodan"><a class="link" href="#_shodan">shodan</a></h3>
+<div class="paragraph">
+<p>A ClojureScript library providing wrappers for the JavaScript console API.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/noprompt/shodan" class="bare">https://github.com/noprompt/shodan</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_hipo"><a class="link" href="#_hipo">hipo</a></h3>
+<div class="paragraph">
+<p>A ClojureScript DOM templating library based on hiccup syntax</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/jeluard/hipo/" class="bare">https://github.com/jeluard/hipo/</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_dommy"><a class="link" href="#_dommy">dommy</a></h3>
+<div class="paragraph">
+<p>A ClojureScript DOM manipulation and event library.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/Prismatic/dommy" class="bare">https://github.com/Prismatic/dommy</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_third_party_libraries_for_both_clojure_and_clojurescript"><a class="link" href="#_third_party_libraries_for_both_clojure_and_clojurescript">Third party libraries for both: Clojure and ClojureScript</a></h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_schema"><a class="link" href="#_schema">schema</a></h3>
+<div class="paragraph">
+<p>Clojure(Script) library for declarative data description and validation</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/Prismatic/schema" class="bare">https://github.com/Prismatic/schema</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-20 19:12:17 CET
+Last updated 2014-12-20 22:04:29 CET
 </div>
 </div>
 </body>
