--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@ programming and good and well documented open source software.</p>
 <div class="sect2">
 <h3 id="_buddy"><a class="link" href="#_buddy">buddy</a></h3>
 <div class="paragraph">
-<p><strong>buddy</strong> is a complete security library for clojure with support for:</p>
+<p><strong>buddy</strong> is a complete security library for clojure.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -1130,7 +1130,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-20 22:04:29 CET
+Last updated 2014-12-20 22:06:40 CET
 </div>
 </div>
 </body>
