--- a/index.html
+++ b/index.html
@@ -801,6 +801,7 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 <li><a href="#_third_party_libraries_for_both_clojure_and_clojurescript">Third party libraries for both: Clojure and ClojureScript</a>
 <ul class="sectlevel2">
 <li><a href="#_schema">schema</a></li>
+<li><a href="#_speclj">speclj</a></li>
 </ul>
 </li>
 </ul>
@@ -1125,12 +1126,25 @@ HTTP &amp; WebSocket clients.</p>
 </ul>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_speclj"><a class="link" href="#_speclj">speclj</a></h3>
+<div class="paragraph">
+<p>It&#8217;s a TDD/BDD framework for Clojure and Clojurescript, based on RSpec.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/slagyr/speclj" class="bare">https://github.com/slagyr/speclj</a></p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-20 22:06:40 CET
+Last updated 2014-12-20 22:12:54 CET
 </div>
 </div>
 </body>
