--- a/index.html
+++ b/index.html
@@ -788,6 +788,10 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 <li><a href="#_nippy">nippy</a></li>
 <li><a href="#_jet">jet</a></li>
 <li><a href="#_nomad">nomad</a></li>
+<li><a href="#_ring">ring</a></li>
+<li><a href="#_compojure">compojure</a></li>
+<li><a href="#_clout">clout</a></li>
+<li><a href="#_hiccup">hiccup</a></li>
 </ul>
 </li>
 <li><a href="#_third_party_libraries_for_clojurescript">Third party libraries for ClojureScript</a>
@@ -796,6 +800,8 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 <li><a href="#_shodan">shodan</a></li>
 <li><a href="#_hipo">hipo</a></li>
 <li><a href="#_dommy">dommy</a></li>
+<li><a href="#_om">om</a></li>
+<li><a href="#_sablono">sablono</a></li>
 </ul>
 </li>
 <li><a href="#_third_party_libraries_for_both_clojure_and_clojurescript">Third party libraries for both: Clojure and ClojureScript</a>
@@ -849,9 +855,9 @@ of them are not known, but also it has much more libraries that are undocumented
 very bad implementation.</p>
 </div>
 <div class="paragraph">
-<p><strong>funcool</strong> people try to maintain a little collection of libraries developed by ourselves and also
-maintain a updated list of libraries that matches with our philosophy, making available a good
-reference list of libraries.</p>
+<p>We will try to maintain a little collection of libraries developed by ourselves and also
+maintain an arbitrary updated list of currently maintained libraries that we have used in the past
+or actualy using for our projects.</p>
 </div>
 </div>
 </div>
@@ -1051,6 +1057,58 @@ HTTP &amp; WebSocket clients.</p>
 </ul>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_ring"><a class="link" href="#_ring">ring</a></h3>
+<div class="paragraph">
+<p>Clojure HTTP server abstraction</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/ring-clojure/ring" class="bare">https://github.com/ring-clojure/ring</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_compojure"><a class="link" href="#_compojure">compojure</a></h3>
+<div class="paragraph">
+<p>A concise routing library for Ring/Clojure</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/weavejester/compojure" class="bare">https://github.com/weavejester/compojure</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_clout"><a class="link" href="#_clout">clout</a></h3>
+<div class="paragraph">
+<p>HTTP route-matching library for Clojure</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/weavejester/clout" class="bare">https://github.com/weavejester/clout</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_hiccup"><a class="link" href="#_hiccup">hiccup</a></h3>
+<div class="paragraph">
+<p>Fast library for rendering HTML in Clojure</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/weavejester/hiccup" class="bare">https://github.com/weavejester/hiccup</a></p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1108,6 +1166,32 @@ HTTP &amp; WebSocket clients.</p>
 </ul>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_om"><a class="link" href="#_om">om</a></h3>
+<div class="paragraph">
+<p>ClojureScript interface to Facebook&#8217;s React</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/swannodette/om" class="bare">https://github.com/swannodette/om</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_sablono"><a class="link" href="#_sablono">sablono</a></h3>
+<div class="paragraph">
+<p>Lisp/Hiccup style templating for Facebook&#8217;s React in ClojureScript.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Github &amp; Documentation: <a href="https://github.com/r0man/sablono" class="bare">https://github.com/r0man/sablono</a></p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1144,7 +1228,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-12-20 22:12:54 CET
+Last updated 2014-12-20 22:35:51 CET
 </div>
 </div>
 </body>
