--- a/index.html
+++ b/index.html
@@ -952,10 +952,10 @@ programming and good, well documented open source software.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Github: <a href="https://github.com/dialelo/hodgepodge" class="bare">https://github.com/dialelo/hodgepodge</a></p>
+<p>Github: <a href="https://github.com/funcool/hodgepodge" class="bare">https://github.com/funcool/hodgepodge</a></p>
 </li>
 <li>
-<p>Documentation: <a href="https://dialelo.github.io/hodgepodge/" class="bare">https://dialelo.github.io/hodgepodge/</a></p>
+<p>Documentation: <a href="https://funcool.github.io/hodgepodge/" class="bare">https://funcool.github.io/hodgepodge/</a></p>
 </li>
 </ul>
 </div>
@@ -1229,7 +1229,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-01-07 17:43:06 UTC
+Last updated 2015-02-01 21:20:44 CET
 </div>
 </div>
 </body>
