Fix Link to Suricatta

--- a/index.html
+++ b/index.html
@@ -917,10 +917,10 @@ programming and good, well documented open source software.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Github: <a href="https://github.com/niwibe/suricatta" class="bare">https://github.com/niwibe/suricatta</a></p>
+<p>Github: <a href="https://github.com/funcool/suricatta" class="bare">https://github.com/funcool/suricatta</a></p>
 </li>
 <li>
-<p>Documentation: <a href="http://niwibe.github.io/suricatta/" class="bare">http://niwibe.github.io/suricatta/</a></p>
+<p>Documentation: <a href="http://funcool.github.io/suricatta/latest/" class="bare">http://funcool.github.io/suricatta/latest/</a></p>
 </li>
 </ul>
 </div>
