--- a/index.html
+++ b/index.html
@@ -885,10 +885,10 @@ programming and good, well documented open source software.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Github: <a href="https://github.com/niwibe/buddy" class="bare">https://github.com/niwibe/buddy</a></p>
+<p>Github: <a href="https://github.com/funcool/buddy" class="bare">https://github.com/funcool/buddy</a></p>
 </li>
 <li>
-<p>Documentation: <a href="https://niwibe.github.io/buddy/" class="bare">https://niwibe.github.io/buddy/</a></p>
+<p>Documentation: <a href="https://funcool.github.io/buddy/" class="bare">https://funcool.github.io/buddy/</a></p>
 </li>
 </ul>
 </div>
@@ -904,7 +904,7 @@ programming and good, well documented open source software.</p>
 <p>Github: <a href="https://github.com/funcool/cats" class="bare">https://github.com/funcool/cats</a></p>
 </li>
 <li>
-<p>Documentation: <a href="http://niwibe.github.io/cats/" class="bare">http://niwibe.github.io/cats/</a></p>
+<p>Documentation: <a href="http://funcool.github.io/cats/" class="bare">http://funcool.github.io/cats/</a></p>
 </li>
 </ul>
 </div>
@@ -917,10 +917,10 @@ programming and good, well documented open source software.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Github: <a href="https://github.com/niwibe/suricatta" class="bare">https://github.com/niwibe/suricatta</a></p>
+<p>Github: <a href="https://github.com/funcool/suricatta" class="bare">https://github.com/funcool/suricatta</a></p>
 </li>
 <li>
-<p>Documentation: <a href="http://niwibe.github.io/suricatta/" class="bare">http://niwibe.github.io/suricatta/</a></p>
+<p>Documentation: <a href="http://funcool.github.io/suricatta/" class="bare">http://funcool.github.io/suricatta/</a></p>
 </li>
 </ul>
 </div>
@@ -936,10 +936,10 @@ programming and good, well documented open source software.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Github: <a href="https://github.com/niwibe/clojure.jdbc" class="bare">https://github.com/niwibe/clojure.jdbc</a></p>
+<p>Github: <a href="https://github.com/funcool/clojure.jdbc" class="bare">https://github.com/funcool/clojure.jdbc</a></p>
 </li>
 <li>
-<p>Documentation: <a href="http://niwibe.github.io/clojure.jdbc/" class="bare">http://niwibe.github.io/clojure.jdbc/</a></p>
+<p>Documentation: <a href="http://funcool.github.io/clojure.jdbc/" class="bare">http://funcool.github.io/clojure.jdbc/</a></p>
 </li>
 </ul>
 </div>
@@ -1229,7 +1229,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-02-01 21:20:44 CET
+Last updated 2015-05-22 08:43:29 CEST
 </div>
 </div>
 </body>
