--- a/index.html
+++ b/index.html
@@ -771,6 +771,11 @@ pre.pygments.highlight { background-color: rgba(16, 195, 196, 0.05); }
 <ul class="sectlevel1">
 <li><a href="#_introduction">Introduction</a></li>
 <li><a href="#_who_is_responsible_for_it">Who is responsible for it?</a></li>
+<li><a href="#_how_can_i_help">How can I help?</a>
+<ul class="sectlevel2">
+<li><a href="#_code_of_conduct">Code of Conduct</a></li>
+</ul>
+</li>
 <li><a href="#_libraries_developed_by_us">Libraries developed by us</a>
 <ul class="sectlevel2">
 <li><a href="#_buddy">buddy</a></li>
@@ -871,6 +876,40 @@ programming and good, well documented open source software.</p>
 </div>
 <div class="paragraph">
 <p>You can contact us using <strong>funcool</strong> google groups: <a href="https://groups.google.com/forum/#!forum/funcool" class="bare">https://groups.google.com/forum/#!forum/funcool</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_how_can_i_help"><a class="link" href="#_how_can_i_help">How can I help?</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The funcool projects don&#8217;t have any restrictions for contributions. We track issues using GitHub
+issues and accept contributions via pull requests.</p>
+</div>
+<div class="paragraph">
+<p>If you want to contribute to any of our projects just open an issue or pull request. We usually
+hang out in the #funcool channel of the Clojurians Slack <a href="http://clojurians.slack.com" class="bare">http://clojurians.slack.com</a>, we&#8217;ll be
+happy to answer your questions and help you contribute to our projects.</p>
+</div>
+<div class="sect2">
+<h3 id="_code_of_conduct"><a class="link" href="#_code_of_conduct">Code of Conduct</a></h3>
+<div class="paragraph">
+<p>Funcool is a inclusive organization, all are welcome.</p>
+</div>
+<div class="paragraph">
+<p>Please respect each other.</p>
+</div>
+<div class="paragraph">
+<p>Do not dismiss, abuse, harass, attach, insult or discriminate against others.</p>
+</div>
+<div class="paragraph">
+<p>If you feel unwelcome, unsafe or in danger please report the incident/s to one of us:
+- Andrey (twitter: <a href="http://twitter.com/niwinz" class="bare">http://twitter.com/niwinz</a>, email: <a href="mailto:niwi@niwi.nz">niwi@niwi.nz</a>)
+- Alejandro (twitter: <a href="http://twitter.com/dialelo" class="bare">http://twitter.com/dialelo</a>, email: <a href="mailto:alejandro@dialelo.com">alejandro@dialelo.com</a>)</p>
+</div>
+<div class="paragraph">
+<p>We will work with you to resolve the issue promptly.</p>
+</div>
 </div>
 </div>
 </div>
@@ -1229,7 +1268,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-22 08:43:29 CEST
+Last updated 2015-12-06 15:05:35 CET
 </div>
 </div>
 </body>
