--- a/index.html
+++ b/index.html
@@ -903,9 +903,17 @@ happy to answer your questions and help you contribute to our projects.</p>
 <p>Do not dismiss, abuse, harass, attach, insult or discriminate against others.</p>
 </div>
 <div class="paragraph">
-<p>If you feel unwelcome, unsafe or in danger please report the incident/s to one of us:
-- Andrey (twitter: <a href="http://twitter.com/niwinz" class="bare">http://twitter.com/niwinz</a>, email: <a href="mailto:niwi@niwi.nz">niwi@niwi.nz</a>)
-- Alejandro (twitter: <a href="http://twitter.com/dialelo" class="bare">http://twitter.com/dialelo</a>, email: <a href="mailto:alejandro@dialelo.com">alejandro@dialelo.com</a>)</p>
+<p>If you feel unwelcome, unsafe or in danger please report the incident/s to one of us:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Andrey (twitter: <a href="http://twitter.com/niwinz" class="bare">http://twitter.com/niwinz</a>, email: <a href="mailto:niwi@niwi.nz">niwi@niwi.nz</a>)</p>
+</li>
+<li>
+<p>Alejandro (twitter: <a href="http://twitter.com/dialelo" class="bare">http://twitter.com/dialelo</a>, email: <a href="mailto:alejandro@dialelo.com">alejandro@dialelo.com</a>)</p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
 <p>We will work with you to resolve the issue promptly.</p>
@@ -1268,7 +1276,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-12-06 15:05:35 CET
+Last updated 2015-12-06 15:07:37 CET
 </div>
 </div>
 </body>
