--- a/index.html
+++ b/index.html
@@ -968,10 +968,7 @@ contribute to our projects.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Code: <a href="https://github.com/funcool/buddy" class="bare">https://github.com/funcool/buddy</a></p>
-</li>
-<li>
-<p>Documentation: <a href="https://funcool.github.io/buddy/" class="bare">https://funcool.github.io/buddy/</a></p>
+<p>Code &amp; Documentation: <a href="https://github.com/funcool/buddy" class="bare">https://github.com/funcool/buddy</a></p>
 </li>
 </ul>
 </div>
@@ -1358,7 +1355,7 @@ HTTP &amp; WebSocket clients.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-04-27 21:34:50 EEST
+Last updated 2016-04-27 21:36:34 EEST
 </div>
 </div>
 </body>
